--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,5 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+// mainClassName = "com.tn.wechat.WechatApplication"
