--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+
+def env = System.getProperty("env") ?: "dev"
+
 buildscript {
 	ext {
 		springBootVersion = '1.5.4.RELEASE'
@@ -17,8 +20,21 @@ apply plugin: 'org.springframework.boot'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+war {
+    baseName = 'wechat-' + env
+    version =  '1.0'
+}
+
 repositories {
 	mavenCentral()
+}
+
+sourceSets {
+	main {
+		resources {
+			srcDirs = ["src/main/resources", "src/main/profile/$env"]
+		}
+	}
 }
 
 dependencies {
