session_id -> session_key

--- a/src/main/profile/du/application.properties
+++ b/src/main/profile/du/application.properties
@@ -2,3 +2,8 @@ spring.profiles.active=production
 wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.appId=wx49fb72249d0c8055
 wx.secret=c4b68ae1e3aa91a6e84dfba2ed577fe2
+
+app.datasource.url=jdbc:hsqldb:hsql://localhost/testdb
+app.datasource.username=SA
+app.datasource.password=
+app.datasource.pool-size=30
