--- a/src/main/profile/prod/application.properties
+++ b/src/main/profile/prod/application.properties
@@ -2,3 +2,9 @@ spring.profiles.active=production
 wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.appId=wxab931d22fde028bc
 wx.secret=00991f0e10eba1fab3996c1736e3f1ca
+
+
+app.datasource.url=jdbc:hsqldb:hsql://localhost/testdb
+app.datasource.username=SA
+app.datasource.password=
+app.datasource.pool-size=30
