session_id -> session_key

--- a/src/main/profile/prod/application.properties
+++ b/src/main/profile/prod/application.properties
@@ -4,7 +4,7 @@ wx.appId=wxab931d22fde028bc
 wx.secret=00991f0e10eba1fab3996c1736e3f1ca
 
 
-app.datasource.url=jdbc:hsqldb:hsql://localhost/testdb
+app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
 app.datasource.username=SA
-app.datasource.password=
+app.datasource.password=wechat43s
 app.datasource.pool-size=30
