--- a/build.gradle
+++ b/build.gradle
@@ -42,15 +42,12 @@ dependencies {
 		exclude module: 'spring-boot-starter-logging'
 	}
     compile('org.springframework.boot:spring-boot-starter-log4j2')
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	providedRuntime ('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	//compile('org.mybatis:mybatis:3.4.5')
-	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1')
-            {
-                exclude module: 'spring-boot-starter-logging'
-            }
-//	compile ('org.mybatis:mybatis:3.4.2')
-//		compile ('org.mybatis:mybatis-spring:1.3.1')
+	
+	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1') {
+        exclude module: 'spring-boot-starter-logging'
+    }
 	compile('org.hsqldb:hsqldb:2.4.0')
 	compile group: 'org.json', name: 'json', version: '20171018'
 }
