--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,18 @@ dependencies {
     }
 	compile('org.hsqldb:hsqldb:2.4.0')
 	compile group: 'org.json', name: 'json', version: '20171018'
+    compile "com.github.kstyrc:embedded-redis:0.6"
+	compile "org.springframework.session:spring-session"
+    compile ("org.springframework.boot:spring-boot-starter-data-redis" ){
+        exclude module: 'spring-boot-starter-logging'
+    }
+
+//    compile ("org.springframework.data:spring-data-redis") {
+//        exclude group: "org.slf4j", module: 'slf4j-api'
+//        exclude group: "org.slf4j", module: 'jcl-over-slf4j'
+//    }
+//    compile "redis.clients:jedis",
+//            "org.apache.commons:commons-pool2"
 }
 
 // mainClassName = "com.tn.wechat.WechatApplication"
