--- a/src/main/profile/dev/application.properties
+++ b/src/main/profile/dev/application.properties
@@ -7,3 +7,12 @@ app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
 app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
+
+#app.datasource.url=jdbc:hsqldb:hsql://localhost:9001/testdb
+#app.datasource.username=SA
+#app.datasource.password=
+#app.datasource.pool-size=30
+
+spring.redis.host=redis-11366.c6.eu-west-1-1.ec2.cloud.redislabs.com
+#spring.redis.password=secret
+spring.redis.port=11366
