--- a/build.gradle
+++ b/build.gradle
@@ -48,12 +48,18 @@ dependencies {
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1') {
         exclude module: 'spring-boot-starter-logging'
     }
+
+    testCompile('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.1')
 	compile('org.hsqldb:hsqldb:2.4.0')
 	compile group: 'org.json', name: 'json', version: '20171018'
     compile "com.github.kstyrc:embedded-redis:0.6"
 	compile "org.springframework.session:spring-session"
     compile ("org.springframework.boot:spring-boot-starter-data-redis" ){
         exclude module: 'spring-boot-starter-logging'
+    }
+
+    if(env!="production"){
+        runtime('org.springframework.boot:spring-boot-devtools')
     }
 
 //    compile ("org.springframework.data:spring-data-redis") {
