--- a/src/main/profile/dev/application.properties
+++ b/src/main/profile/dev/application.properties
@@ -16,3 +16,4 @@ app.datasource.pool-size=30
 spring.redis.host=redis-11366.c6.eu-west-1-1.ec2.cloud.redislabs.com
 #spring.redis.password=secret
 spring.redis.port=11366
+spring.session.store-type=redis
