add driver class

--- a/src/main/profile/dev/application.properties
+++ b/src/main/profile/dev/application.properties
@@ -7,6 +7,7 @@ app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
 app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
+app.datasource.driver-class-name=org.hsqldb.jdbcDriver
 
 #app.datasource.url=jdbc:hsqldb:hsql://localhost:9001/testdb
 #app.datasource.username=SA
