--- a/src/main/profile/prod/application.properties
+++ b/src/main/profile/prod/application.properties
@@ -8,3 +8,4 @@ app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
 app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
+app.datasource.driver-class-name=org.hsqldb.jdbcDriver
