--- a/src/main/profile/du/application.properties
+++ b/src/main/profile/du/application.properties
@@ -7,3 +7,4 @@ app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
 app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
+app.datasource.driver-class-name=org.hsqldb.jdbcDriver
