add a test function.

--- a/bin/application.properties
+++ b/bin/application.properties
@@ -2,3 +2,19 @@ spring.profiles.active=dev
 wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.appId=wxab931d22fde028bc
 wx.secret=00991f0e10eba1fab3996c1736e3f1ca
+
+app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
+app.datasource.username=SA
+app.datasource.password=wechat43s
+app.datasource.pool-size=30
+app.datasource.driver-class-name=org.hsqldb.jdbcDriver
+
+#app.datasource.url=jdbc:hsqldb:hsql://localhost:9001/testdb
+#app.datasource.username=SA
+#app.datasource.password=
+#app.datasource.pool-size=30
+
+spring.redis.host=redis-11366.c6.eu-west-1-1.ec2.cloud.redislabs.com
+#spring.redis.password=secret
+spring.redis.port=11366
+spring.session.store-type=redis
