--- a/src/main/profile/du/application.properties
+++ b/src/main/profile/du/application.properties
@@ -1,4 +1,8 @@
-spring.profiles.active=dev
+spring.profiles.active=production
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration,org.springframework.boot.autoconfigure.session.RedisSessionConfiguration
+spring.session.store-type=none
+security.ignored=/**
+
 wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.appId=wx49fb72249d0c8055
 wx.secret=c4b68ae1e3aa91a6e84dfba2ed577fe2
@@ -8,3 +12,22 @@ app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
 app.datasource.driver-class-name=org.hsqldb.jdbcDriver
+
+#app.datasource.url=jdbc:hsqldb:hsql://localhost:9001/testdb
+#app.datasource.username=SA
+#app.datasource.password=
+#app.datasource.pool-size=30
+spring.redis.host=168.1.144.202
+#spring.redis.password=secret
+spring.redis.port=11366
+#spring.session.store-type=redis
+#
+#spring.redis.host=redis-11366.c6.eu-west-1-1.ec2.cloud.redislabs.com
+##spring.redis.password=secret
+#spring.redis.port=31554
+
+
+
+#spring.redis.host=localhost
+#spring.redis.password=secret
+#spring.redis.port=6379
