--- a/src/main/profile/dev/application.properties
+++ b/src/main/profile/dev/application.properties
@@ -1,4 +1,10 @@
 spring.profiles.active=dev
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration,org.springframework.boot.autoconfigure.session.RedisSessionConfiguration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+spring.session.store-type=none
+
+
+#spring.session.store-type=redis
 wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.appId=wxab931d22fde028bc
 wx.secret=00991f0e10eba1fab3996c1736e3f1ca
@@ -14,7 +20,16 @@ app.datasource.driver-class-name=org.hsqldb.jdbcDriver
 #app.datasource.password=
 #app.datasource.pool-size=30
 
-spring.redis.host=redis-11366.c6.eu-west-1-1.ec2.cloud.redislabs.com
+#spring.data.redis.repositories.enabled=false
+#spring.redis.host=redis-11366.c6.eu-west-1-1.ec2.cloud.redislabs.com
+##spring.redis.password=secret
+#spring.redis.port=11366
+
+
+spring.redis.host=168.1.144.202
 #spring.redis.password=secret
 spring.redis.port=11366
-spring.session.store-type=redis
+
+#spring.redis.host=localhost
+#spring.redis.password=secret
+#spring.redis.port=6379
