--- a/src/main/profile/prod/application.properties
+++ b/src/main/profile/prod/application.properties
@@ -9,3 +9,17 @@ app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
 app.datasource.driver-class-name=org.hsqldb.jdbcDriver
+
+#app.datasource.url=jdbc:hsqldb:hsql://localhost:9001/testdb
+#app.datasource.username=SA
+#app.datasource.password=
+#app.datasource.pool-size=30
+
+spring.redis.host=redis-11366.c6.eu-west-1-1.ec2.cloud.redislabs.com
+#spring.redis.password=secret
+spring.redis.port=11366
+spring.session.store-type=redis
+
+#spring.redis.host=localhost
+#spring.redis.password=secret
+#spring.redis.port=6379
