--- a/src/main/profile/dev/application.properties
+++ b/src/main/profile/dev/application.properties
@@ -1,5 +1,8 @@
 spring.profiles.active=dev
-wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+#spring.session.store-type=none
+wx.url.openid=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
+wx.signature.token=ibm4wechatall
 wx.appId=wxab931d22fde028bc
 wx.secret=00991f0e10eba1fab3996c1736e3f1ca
 
