--- a/src/main/profile/du/application.properties
+++ b/src/main/profile/du/application.properties
@@ -1,5 +1,6 @@
-spring.profiles.active=dev
-wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
+spring.profiles.active=production
+wx.url.openid=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
+wx.signature.token=ibm4wechatall
 wx.appId=wx49fb72249d0c8055
 wx.secret=c4b68ae1e3aa91a6e84dfba2ed577fe2
 
