--- a/src/main/profile/prod/application.properties
+++ b/src/main/profile/prod/application.properties
@@ -1,10 +1,11 @@
 spring.profiles.active=production
-wx.url=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
-wx.appId=wxab931d22fde028bc
-wx.secret=00991f0e10eba1fab3996c1736e3f1ca
+wx.url.openid=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
+wx.signature.token=ibm4wechatall
+wx.appId=wx981488ea320f071a
+wx.secret=13fa68119cd015a9b62f1d04899660bc
 
 
-app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
+app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9101/wechat_prod
 app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
