--- a/src/main/profile/du/application.properties
+++ b/src/main/profile/du/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=production
+spring.profiles.active=dev
 wx.url.openid=https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.signature.token=ibm4wechatall
 wx.appId=wx49fb72249d0c8055
