--- a/src/main/profile/prod/application.properties
+++ b/src/main/profile/prod/application.properties
@@ -5,7 +5,8 @@ wx.appId=wx981488ea320f071a
 wx.secret=13fa68119cd015a9b62f1d04899660bc
 
 
-app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9101/wechat_prod
+#app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9101/wechat_prod
+app.datasource.url=jdbc:hsqldb:hsql://todaynowork.group:9001/wechat
 app.datasource.username=SA
 app.datasource.password=wechat43s
 app.datasource.pool-size=30
